# mimiclaw

./: README.md  README_CN.md  README_JA.md  deploy.sh  flash.sh  partitions.csv
main/: CMakeLists.txt  mimi.c  mimi_config.h
main/agent/: agent_loop.c  context_builder.c
main/cli/: serial_cli.c
main/display/: display.c  display.h
main/gateway/: ws_server.c
main/imu/: I2C_Driver.c  I2C_Driver.h  imu_manager.c
main/llm/: llm_proxy.c
main/ota/: ota_manager.c  ota_manager.h
main/proxy/: http_proxy.c
main/rgb/: rgb.c
main/skills/: skill_loader.c
main/telegram/: telegram_bot.c  telegram_bot.h  telegram_http.c  telegram_http.h  telegram_tls_test.c  telegram_tls_test.h
main/time/: time_sync.c  time_sync.h
main/tools/: tool_browser_use.c  tool_get_time.c  tool_registry.c  tool_web_search.c
main/ui/: config_screen.c
tests/telegram_http/: CMakeLists.txt  test_telegram_http.c
